[gd_scene load_steps=15 format=3 uid="uid://dl44clkw2hucb"]

[ext_resource type="Script" path="res://World/world.gd" id="1_thnpw"]
[ext_resource type="Texture2D" uid="uid://bj4i0apn3r8e6" path="res://UI/bg.png" id="2_h6ejw"]
[ext_resource type="Texture2D" uid="uid://c05d5n1y1yjpt" path="res://World/mapSquare.png" id="2_nabvn"]
[ext_resource type="PackedScene" uid="uid://bgcsq1xdk5h5f" path="res://Player/player.tscn" id="3_cv4m1"]
[ext_resource type="Script" path="res://World/Collectables.gd" id="4_wheeu"]
[ext_resource type="Script" path="res://UI/UI.gd" id="5_r61hf"]
[ext_resource type="Script" path="res://World/Enemies.gd" id="5_y5xdu"]
[ext_resource type="Texture2D" uid="uid://ch1ca6arumfqe" path="res://UI/circleFillBg.png" id="6_rqpo1"]
[ext_resource type="Texture2D" uid="uid://8ifih7adxjgo" path="res://UI/circleFill.png" id="7_4upey"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_efxdm"]
size = Vector2(31.1127, 31.1127)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_krarw"]
size = Vector2(768, 432)

[sub_resource type="SystemFont" id="SystemFont_8j417"]
font_names = PackedStringArray("Consolas")

[sub_resource type="SystemFont" id="SystemFont_xnk6g"]
font_names = PackedStringArray("Consolas")

[sub_resource type="SystemFont" id="SystemFont_h6oxo"]
font_names = PackedStringArray("Consolas")

[node name="World" type="Node2D"]
script = ExtResource("1_thnpw")
metadata/_edit_lock_ = true

[node name="BG" type="Polygon2D" parent="."]
z_index = -100
color = Color(0.784314, 0.784314, 0.784314, 0.607843)
polygon = PackedVector2Array(-384, -216, 384, -216, 384, 216, -384, 216)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="BG"]
modulate = Color(1, 1, 1, 0.392157)
z_index = -105
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_h6ejw")
metadata/_edit_lock_ = true

[node name="Points" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Point0" type="StaticBody2D" parent="Points"]
rotation = 0.785398
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Points/Point0"]
position = Vector2(1.52588e-05, 1.52588e-05)
shape = SubResource("RectangleShape2D_efxdm")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Points/Point0"]
texture = ExtResource("2_nabvn")
metadata/_edit_lock_ = true

[node name="Point1" type="StaticBody2D" parent="Points"]
position = Vector2(0, -100)
rotation = 0.785398
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Points/Point1"]
shape = SubResource("RectangleShape2D_efxdm")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Points/Point1"]
texture = ExtResource("2_nabvn")
metadata/_edit_lock_ = true

[node name="Point2" type="StaticBody2D" parent="Points"]
position = Vector2(170, 0)
rotation = 0.785398
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Points/Point2"]
shape = SubResource("RectangleShape2D_efxdm")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Points/Point2"]
texture = ExtResource("2_nabvn")
metadata/_edit_lock_ = true

[node name="Point3" type="StaticBody2D" parent="Points"]
position = Vector2(0, 100)
rotation = 0.785398
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Points/Point3"]
shape = SubResource("RectangleShape2D_efxdm")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Points/Point3"]
texture = ExtResource("2_nabvn")
metadata/_edit_lock_ = true

[node name="Point4" type="StaticBody2D" parent="Points"]
position = Vector2(-170, 0)
rotation = 0.785398
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Points/Point4"]
shape = SubResource("RectangleShape2D_efxdm")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Points/Point4"]
texture = ExtResource("2_nabvn")
metadata/_edit_lock_ = true

[node name="Lines" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="FillPolygons" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("3_cv4m1")]
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -82)
offset = Vector2(0, 82)
zoom = Vector2(2, 2)
metadata/_edit_lock_ = true

[node name="BoundaryRectArea" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundaryRectArea"]
shape = SubResource("RectangleShape2D_krarw")
debug_color = Color(1, 1, 1, 0.0392157)
metadata/_edit_lock_ = true

[node name="Collectables" type="Node2D" parent="."]
script = ExtResource("4_wheeu")
metadata/_edit_lock_ = true

[node name="CollectablesTimer" type="Timer" parent="Collectables"]
wait_time = 4.0
one_shot = true

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource("5_y5xdu")
metadata/_edit_lock_ = true

[node name="EnemiesTimer" type="Timer" parent="Enemies"]
wait_time = 4.0
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("5_r61hf")

[node name="MultiplierProgressBar" type="TextureProgressBar" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = 12.0
offset_right = 16.0
offset_bottom = 44.0
grow_horizontal = 2
scale = Vector2(1.6, 1.6)
pivot_offset = Vector2(16, 16)
fill_mode = 4
texture_under = ExtResource("6_rqpo1")
texture_progress = ExtResource("7_4upey")

[node name="MultiplierTxt" type="Label" parent="UI/MultiplierProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_8j417")
text = "x1"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="ScoreTxt" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -58.5
offset_top = 53.53
offset_right = 58.5
offset_bottom = 100.53
grow_horizontal = 2
theme_override_fonts/font = SubResource("SystemFont_xnk6g")
theme_override_font_sizes/font_size = 31
text = "0"
horizontal_alignment = 1

[node name="ScorePopups" type="Node2D" parent="UI"]
metadata/_edit_lock_ = true

[node name="ScorePopup" type="Label" parent="UI/ScorePopups"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 495.0
offset_top = 220.0
offset_right = 645.0
offset_bottom = 370.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(75, 75)
theme_override_colors/font_shadow_color = Color(0.494118, 0.501961, 0.913725, 0.952941)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/font = SubResource("SystemFont_h6oxo")
theme_override_font_sizes/font_size = 56
text = "+5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverUI" type="CanvasLayer" parent="UI"]
process_mode = 3
visible = false

[node name="Panel" type="Panel" parent="UI/GameOverUI"]
offset_right = 1152.0
offset_bottom = 647.0

[node name="TitleTxt" type="Label" parent="UI/GameOverUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -128.0
offset_right = 68.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_xnk6g")
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1

[node name="ScoreTxt" type="Label" parent="UI/GameOverUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.5
offset_top = -23.5
offset_right = 58.5
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_xnk6g")
theme_override_font_sizes/font_size = 31
text = "Score: 0"
horizontal_alignment = 1

[node name="HighscoreTxt" type="Label" parent="UI/GameOverUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.5
offset_top = 17.0
offset_right = 58.5
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_xnk6g")
theme_override_font_sizes/font_size = 31
text = "Highscore: 0"
horizontal_alignment = 1

[node name="RestartButon" type="Button" parent="UI/GameOverUI"]
process_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -245.0
offset_right = 32.0
offset_bottom = -214.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.505, 2.505)
pivot_offset = Vector2(36.215, 15.015)
text = "RESTART"
flat = true

[node name="QuitButton" type="Button" parent="UI/GameOverUI"]
process_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -174.0
offset_right = 38.0
offset_bottom = -143.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.505, 2.505)
pivot_offset = Vector2(36.215, 15.015)
text = "QUIT"
flat = true

[node name="PauseUI" type="CanvasLayer" parent="UI"]
process_mode = 3
visible = false

[node name="Panel" type="Panel" parent="UI/PauseUI"]
offset_right = 1152.0
offset_bottom = 647.0

[node name="TitleTxt" type="Label" parent="UI/PauseUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -131.5
offset_right = 68.0
offset_bottom = -77.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_xnk6g")
theme_override_font_sizes/font_size = 50
text = "Pause"
horizontal_alignment = 1

[node name="HighscoreTxt" type="Label" parent="UI/PauseUI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -231.71
offset_right = 102.0
offset_bottom = -184.71
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_xnk6g")
theme_override_font_sizes/font_size = 31
text = "Highscore: 0"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="UI/PauseUI"]
process_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -340.0
offset_right = 38.0
offset_bottom = -309.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.505, 2.505)
pivot_offset = Vector2(36.215, 15.015)
text = "RESUME"
flat = true

[node name="RestartButon" type="Button" parent="UI/PauseUI"]
process_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -251.0
offset_right = 40.0
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.505, 2.505)
pivot_offset = Vector2(36.215, 15.015)
text = "RESTART"
flat = true

[node name="QuitButton" type="Button" parent="UI/PauseUI"]
process_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -174.0
offset_right = 38.0
offset_bottom = -143.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.505, 2.505)
pivot_offset = Vector2(36.215, 15.015)
text = "QUIT"
flat = true

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="timeout" from="Collectables/CollectablesTimer" to="Collectables" method="_on_collectables_timer_timeout"]
[connection signal="timeout" from="Enemies/EnemiesTimer" to="Enemies" method="_on_enemies_timer_timeout"]
[connection signal="pressed" from="UI/GameOverUI/RestartButon" to="UI" method="_on_restart_buton_pressed"]
[connection signal="pressed" from="UI/GameOverUI/QuitButton" to="UI" method="_on_quit_button_pressed"]
[connection signal="pressed" from="UI/PauseUI/ResumeButton" to="UI" method="_on_resume_button_pressed"]
[connection signal="pressed" from="UI/PauseUI/RestartButon" to="UI" method="_on_restart_buton_pressed"]
[connection signal="pressed" from="UI/PauseUI/QuitButton" to="UI" method="_on_quit_button_pressed"]
